<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/hint_search"/>

    <item
        android:id="@+id/action_show_methods"
        android:icon="@drawable/ic_outline_view_list_24"
        app:showAsAction="ifRoom"
        android:title="@string/show_methods"/>

    <item
        android:id="@+id/action_three_dots"
        android:icon="@drawable/ic_three_vertical_dot"
        app:showAsAction="always"
        android:title="@string/three_dots"/>
</menu>