<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/test"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_avatar_btn_action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            android:layout_margin="@dimen/_20dp"
            android:paddingTop="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp"
            android:paddingStart="@dimen/_32dp"
            android:paddingEnd="@dimen/_32dp"
            android:background="@drawable/btn_bg_blue_square_pressed"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar_user"
            android:src="@drawable/beginner3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toStartOf="@id/btn_done"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            android:layout_margin="@dimen/_20dp"
            android:paddingTop="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp"
            android:paddingStart="@dimen/_32dp"
            android:paddingEnd="@dimen/_32dp"
            android:background="@drawable/btn_bg_blue_square_pressed"
            android:textAllCaps="false"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_avatar_btn_action"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:textColor="@color/gray_555"
                android:textSize="@dimen/_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name_demo" />
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/_12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:textColor="@color/gray_555"
                android:textSize="@dimen/_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edt_user_email"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email_demo"
                android:autofillHints="emailAddress" />
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/_12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:textColor="@color/gray_555"
                android:textSize="@dimen/_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_birth" />

            <TextView
                android:id="@+id/day_of_birth"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_demo" />
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/_12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="@color/gray_555"
                android:textSize="@dimen/_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/radio_group_select_sex"
                android:layout_marginStart="@dimen/_12dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_marginStart="@dimen/_12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>