<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black1"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_person_name_title"
                android:textColor="@color/blue_light1"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_person_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/name_demo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_birthday_person_title"
                android:textColor="@color/blue_light1"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/tv_birthday_person"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/day_demo" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/img_avatar_person"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout"
        app:srcCompat="@drawable/beginner3" />

    <TextView
        android:id="@+id/tv_person_info"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        android:layout_margin="@dimen/_8dp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginEnd="@dimen/_12dp"
        android:layout_marginBottom="@dimen/_28dp"
        android:text="@string/overview_demo" />
</androidx.constraintlayout.widget.ConstraintLayout>